# lighthouse-cli

./: .coderabbit.yaml  .gitignore  .pr_agent.toml  AGENTS.md  CONTRIBUTING.md  README.md  REVIEW.md  SECURITY.md  auth-migration-diff-review.html  best_practices.md  greptile.json  pyproject.toml  review.md  socket.yml
.gemini/: config.yaml  styleguide.md
.github/: copilot-instructions.md
.github/workflows/: pullfrog.yml
docs/: auth-login-handoff.md  auth-microsoft-sso.md
docs/adr/: 0001-manifest-based-sync-with-sha256-dedup.md  0002-headless-browser-auth-with-flexible-2fa.md  0003-separate-download-and-sync-commands.md  0004-assignment-submission-via-d2l-api.md
lighthouse_cli/: __init__.py  api.py  assignments.py  auth.py  cli.py  commands.py  config.py  course_config.py  display.py  manifest.py  ms_auth.py  ms_errors.py  ms_mfa.py  ms_parse.py  ms_session.py  show.py  submit.py  utils.py
scripts/: credentials.example.env  probe_mfa_methods.py
tests/: __init__.py  conftest.py  test_assignment_download.py  test_assignments.py  test_auth_login.py  test_cmd_semesters.py  test_config_courses.py  test_credential_store.py  test_download_sync.py  test_html_download.py  test_json_output.py  test_manifest.py  test_ms_auth.py  test_sanitization.py  test_scope.py  test_submit.py  test_sync.py
