[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lighthouse-cli"
version = "0.1.0"
description = "CLI tool for D2L Brightspace LMS at lighthouse.manipal.edu"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "click>=8.1",
    "requests>=2.31",
    "playwright>=1.40",
    "keyring>=24.0",
    "cryptography>=41.0",
]

[project.optional-dependencies]
rich = ["rich>=13.0"]

[project.scripts]
lighthouse = "lighthouse_cli.cli:cli"

[tool.setuptools.packages.find]
include = ["lighthouse_cli*"]
